--- a/CommunitySpirit/Base.lproj/Main.storyboard
+++ b/CommunitySpirit/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15E33e" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="CommunitySpirit" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,55 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="forest" translatesAutoresizingMaskIntoConstraints="NO" id="rqj-3S-ufT">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YHf-mb-q1N">
+                                <rect key="frame" x="150.5" y="481" width="300" height="46"/>
+                                <state key="normal" image="facebookLoginButton"/>
+                                <connections>
+                                    <action selector="fbButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jmy-ck-DoL"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="communitySpiritLogo" translatesAutoresizingMaskIntoConstraints="NO" id="DeZ-04-JFd">
+                                <rect key="frame" x="119" y="60" width="363" height="247"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="247" id="9bb-ur-OYC"/>
+                                    <constraint firstAttribute="width" constant="363" id="cAi-3j-tAJ"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="rqj-3S-ufT" secondAttribute="trailing" id="J9q-V6-5de"/>
+                            <constraint firstItem="rqj-3S-ufT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="RND-1c-TdF"/>
+                            <constraint firstItem="YHf-mb-q1N" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SdN-7z-TFL"/>
+                            <constraint firstItem="YHf-mb-q1N" firstAttribute="top" secondItem="rqj-3S-ufT" secondAttribute="bottom" constant="-119" id="UdT-wG-4J9"/>
+                            <constraint firstItem="DeZ-04-JFd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cIs-FP-cB6"/>
+                            <constraint firstItem="rqj-3S-ufT" firstAttribute="top" secondItem="DeZ-04-JFd" secondAttribute="bottom" constant="-269" id="gq7-PK-niZ"/>
+                            <constraint firstItem="DeZ-04-JFd" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="iFn-Tr-twz"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="rqj-3S-ufT" secondAttribute="bottom" id="kZW-ln-wFK"/>
+                            <constraint firstItem="rqj-3S-ufT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wcz-y0-Plp"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="gq7-PK-niZ"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="backgroundImage" destination="rqj-3S-ufT" id="s39-YT-pmf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="455" y="296"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="communitySpiritLogo" width="600" height="500"/>
+        <image name="facebookLoginButton" width="300" height="46"/>
+        <image name="forest" width="3264" height="2448"/>
+    </resources>
 </document>
