--- a/CommunitySpirit/Base.lproj/Main.storyboard
+++ b/CommunitySpirit/Base.lproj/Main.storyboard
@@ -17,14 +17,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="forest" translatesAutoresizingMaskIntoConstraints="NO" id="rqj-3S-ufT">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="forest" translatesAutoresizingMaskIntoConstraints="NO" id="rqj-3S-ufT">
+                                <rect key="frame" x="-15" y="-15" width="630" height="630"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YHf-mb-q1N">
-                                <rect key="frame" x="150.5" y="481" width="300" height="46"/>
+                                <rect key="frame" x="150.5" y="496" width="300" height="46"/>
                                 <state key="normal" image="facebookLoginButton"/>
                                 <connections>
                                     <action selector="fbButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jmy-ck-DoL"/>
+                                    <segue destination="h6T-GI-j4q" kind="show" identifier="loggedIn" id="INl-Mw-VAs"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="communitySpiritLogo" translatesAutoresizingMaskIntoConstraints="NO" id="DeZ-04-JFd">
@@ -37,15 +38,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="rqj-3S-ufT" secondAttribute="trailing" id="J9q-V6-5de"/>
-                            <constraint firstItem="rqj-3S-ufT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="RND-1c-TdF"/>
+                            <constraint firstAttribute="trailing" secondItem="rqj-3S-ufT" secondAttribute="trailing" constant="-15" id="J9q-V6-5de"/>
+                            <constraint firstItem="rqj-3S-ufT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="-15" id="RND-1c-TdF"/>
                             <constraint firstItem="YHf-mb-q1N" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SdN-7z-TFL"/>
                             <constraint firstItem="YHf-mb-q1N" firstAttribute="top" secondItem="rqj-3S-ufT" secondAttribute="bottom" constant="-119" id="UdT-wG-4J9"/>
                             <constraint firstItem="DeZ-04-JFd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cIs-FP-cB6"/>
                             <constraint firstItem="rqj-3S-ufT" firstAttribute="top" secondItem="DeZ-04-JFd" secondAttribute="bottom" constant="-269" id="gq7-PK-niZ"/>
                             <constraint firstItem="DeZ-04-JFd" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="iFn-Tr-twz"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="rqj-3S-ufT" secondAttribute="bottom" id="kZW-ln-wFK"/>
-                            <constraint firstItem="rqj-3S-ufT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wcz-y0-Plp"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="rqj-3S-ufT" secondAttribute="bottom" constant="-15" id="kZW-ln-wFK"/>
+                            <constraint firstItem="rqj-3S-ufT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="-15" id="wcz-y0-Plp"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -60,6 +61,81 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="455" y="296"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="B1V-qy-ZT3">
+            <objects>
+                <viewController id="LrE-MO-nw1" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bHV-SL-4ap"/>
+                        <viewControllerLayoutGuide type="bottom" id="hcd-qz-h3G"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="95o-6V-snr">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="pUA-nj-bjR"/>
+                    <navigationItem key="navigationItem" id="dwy-Fo-M2Z"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VdX-J2-8qK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2855" y="296"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="cK7-DY-UV3">
+            <objects>
+                <viewController id="dr0-yQ-hO4" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8Ic-hM-7De"/>
+                        <viewControllerLayoutGuide type="bottom" id="KbQ-rQ-2tC"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mze-VT-DmJ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="TOJ-Mt-7F2"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A7v-LX-Ehp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3645" y="296"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="UPa-Ls-pkM">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="h6T-GI-j4q" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ium-OT-dqH">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Lio-Vd-yER" kind="relationship" relationship="rootViewController" id="wEP-EJ-zaI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VVv-kP-wdD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1231" y="296"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="cN0-Bl-DCA">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Lio-Vd-yER" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="Al4-X1-E3r"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="63Y-WO-cPN">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="LrE-MO-nw1" kind="relationship" relationship="viewControllers" id="zbB-52-2ur"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qyF-B2-HJ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2043" y="296"/>
         </scene>
     </scenes>
     <resources>
