--- a/CommunitySpirit/Base.lproj/Main.storyboard
+++ b/CommunitySpirit/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                 <state key="normal" image="facebookLoginButton"/>
                                 <connections>
                                     <action selector="fbButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jmy-ck-DoL"/>
-                                    <segue destination="h6T-GI-j4q" kind="show" identifier="loggedIn" id="INl-Mw-VAs"/>
+                                    <segue destination="R2r-Yc-oV1" kind="show" identifier="loggedIn" id="zia-tj-Y93"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="communitySpiritLogo" translatesAutoresizingMaskIntoConstraints="NO" id="DeZ-04-JFd">
@@ -60,12 +60,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="455" y="296"/>
+            <point key="canvasLocation" x="435" y="296"/>
         </scene>
-        <!--Item-->
+        <!--Chat Detail View Controller-->
         <scene sceneID="B1V-qy-ZT3">
             <objects>
-                <viewController id="LrE-MO-nw1" sceneMemberID="viewController">
+                <viewController id="LrE-MO-nw1" customClass="ChatDetailViewController" customModule="CommunitySpirit" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="bHV-SL-4ap"/>
                         <viewControllerLayoutGuide type="bottom" id="hcd-qz-h3G"/>
@@ -75,12 +75,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="pUA-nj-bjR"/>
                     <navigationItem key="navigationItem" id="dwy-Fo-M2Z"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VdX-J2-8qK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2855" y="296"/>
+            <point key="canvasLocation" x="1911" y="296"/>
         </scene>
         <!--Item-->
         <scene sceneID="cK7-DY-UV3">
@@ -99,43 +98,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A7v-LX-Ehp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3645" y="296"/>
+            <point key="canvasLocation" x="4457" y="296"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="UPa-Ls-pkM">
+        <!--Item-->
+        <scene sceneID="vbE-Cc-l4o">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="h6T-GI-j4q" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="R2r-Yc-oV1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="pUA-nj-bjR"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ium-OT-dqH">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="eve-Da-LB4">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Lio-Vd-yER" kind="relationship" relationship="rootViewController" id="wEP-EJ-zaI"/>
+                        <segue destination="LrE-MO-nw1" kind="relationship" relationship="rootViewController" id="egS-ik-dK8"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VVv-kP-wdD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X5o-7P-xeo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1231" y="296"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="cN0-Bl-DCA">
-            <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Lio-Vd-yER" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="Al4-X1-E3r"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="63Y-WO-cPN">
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="LrE-MO-nw1" kind="relationship" relationship="viewControllers" id="zbB-52-2ur"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qyF-B2-HJ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2043" y="296"/>
+            <point key="canvasLocation" x="1199" y="296"/>
         </scene>
     </scenes>
     <resources>
